--- a/digitalWallet/templates/register.html
+++ b/digitalWallet/templates/register.html
@@ -1,1 +1,12 @@
 {% extends 'base.html' %}
+{% block content %}
+<form method="POST">
+	{{form.hidden_tag()}}
+	{{form.email.label}} {{form.email}} <br>
+	{{form.username.label}} {{form.username}} <br>
+	{{form.password.label}} {{form.password}} <br>
+	{{form.pass_confirm.label}} {{form.pass_confirm}} <br>
+	{{form.account.html}} {{form.account}} <br>
+	{{form.submit()}}
+</form>
+{% endblock %}
