--- a/digitalWallet/templates/base.html
+++ b/digitalWallet/templates/base.html
@@ -39,16 +39,16 @@
 						<a class="nav-link" aria-current="page" href="{{url_for('register')}}">Register</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Login</a>
+						<a class="nav-link" aria-current="page" href="{{url_for('login')}}">Login</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Account</a>
+						<a class="nav-link" href="{{url_for('register')}}">Account</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Add Money</a>
+						<a class="nav-link" href="{{url_for('add_money')}}">Add Money</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Transfer Money</a>
+						<a class="nav-link" href="{{url_for('transaction')}}">Transfer Money</a>
 					</li>
 				</ul>
 			</div>
