Updated registration form

--- a/digitalWallet/templates/register.html
+++ b/digitalWallet/templates/register.html
@@ -6,7 +6,7 @@
 	{{form.username.label}} {{form.username}} <br>
 	{{form.password.label}} {{form.password}} <br>
 	{{form.pass_confirm.label}} {{form.pass_confirm}} <br>
-	{{form.account.html}} {{form.account}} <br>
+	{{form.amount.label}} {{form.amount}} <br>
 	{{form.submit()}}
 </form>
 {% endblock %}
