--- a/digitalWallet/templates/base.html
+++ b/digitalWallet/templates/base.html
@@ -35,14 +35,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
+					{% if current_user.is_authenticated %}
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="{{url_for('register')}}">Register</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="{{url_for('login')}}">Login</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{url_for('register')}}">Account</a>
+						<a class="nav-link" href="{{url_for('account')}}">Account</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{url_for('add_money')}}">Add Money</a>
@@ -50,6 +45,19 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{url_for('transaction')}}">Transfer Money</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+					</li>
+					{% else %}
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{url_for('register')}}">Register</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{url_for('login')}}">Login</a>
+					</li>
+					{% endif %}
+
+
 				</ul>
 			</div>
 		</div>
